# sol

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
backend/: Dockerfile  README.md  mypy.ini  pyproject.toml  test_integration.py  test_s3.py
backend/app/: main.py
backend/app/api/: app.py  state.py
backend/app/api/dependencies/: __init__.py  auth.py  clients.py  services.py
backend/app/api/middleware/: __init__.py  errors.py  rate_limit.py
backend/app/api/models/: pypi_models.py
backend/app/api/routes/: health.py  metrics.py  router.py
backend/app/api/routes/v1/files/: __init__.py  endpoints.py  handlers.py  models.py
backend/app/api/routes/v1/legacy/: __init__.py  endpoints.py  handlers.py
backend/app/api/routes/v1/pypi/: __init__.py  endpoints.py  handlers.py  models.py
backend/app/api/routes/v1/search/: __init__.py  endpoints.py
backend/app/api/routes/v1/simple/: __init__.py  endpoints.py  handlers.py  models.py
backend/app/core/: config.py
backend/app/core/clients/: __init__.py  base.py
backend/app/core/clients/postgres/: __init__.py  client.py
backend/app/core/clients/s3/: __init__.py  client.py
backend/app/core/clients/valkey/: __init__.py  client.py
backend/app/domain/: __init__.py  models.py
backend/app/repos/: __init__.py  interfaces.py
backend/app/repos/postgres/: __init__.py  file_repo.py  project_repo.py  release_repo.py
backend/app/repos/s3/: __init__.py  storage_repo.py
backend/app/repos/valkey/: __init__.py  cache_repo.py
backend/app/services/: __init__.py  auth_service.py  file_service.py  project_service.py
backend/docs/: rate_limiting.md
backend/scripts/: init_db.py  setup.sh
infra/: docker-compose.yaml
